@@ -3,6 +3,10 @@ Revision history for UFL-WebAdmin-SiteDeploy
 0.04
         - Improve on tag handling of SVN::Notify::Mirror (changes
           configuration parameter from tag_regex to tag_pattern)
+        - Refactor SVN::Notify::Mirror::Rsync::AutoCreateCheckout to
+          Moose roles
+        - Rename SVN::Notify::Mirror::Rsync::AutoCreateCheckout to
+          SVN::Notify::Mirror::Rsync::AutoCheckout
 
 0.03  Mon Mar 31 19:31:33 EDT 2008
         - Add dependencies on the explicit path of binaries used in
